# husky

./: .gitignore  Cargo.toml  NOTES.md  PITFALLS.md
crates/abstractions/all-knowing/: Cargo.toml
crates/abstractions/disk-cache/src/: error.rs  lib.rs  tests.rs
crates/abstractions/idx-arena/src/: arena.rs  map.rs  tests.rs
crates/hir/husky-hir-eager-expr/src/: builder.rs
crates/hir/husky-hir-lazy-expr/src/: builder.rs
crates/latex/latex-ast/src/: parser.rs  sheet.rs
crates/lean/lean-entity-path/: Cargo.toml
crates/lean/lean-helpers/: Cargo.toml
crates/lean/lean-helpers/src/: hypothesis.rs  lib.rs
crates/lean/lean-helpers/src/hypothesis/: term_derivation.rs
crates/lisp/lisp-expr/: Cargo.toml
crates/lisp/lisp-show-expr/: Cargo.toml
crates/math/num-helpers/: Cargo.toml
crates/math/num-helpers/src/: lib.rs
crates/visored/visored-baseq-elaborator/: Cargo.toml
crates/visored/visored-global-dispatch/: Cargo.toml
crates/visored/visored-lean-transpilation/: Cargo.toml
crates/visored/visored-mir-expr/: Cargo.toml
crates/visored/visored-mir-opr/: Cargo.toml
crates/visored/visored-pipeline/: Cargo.toml
crates/visored/visored-term/: Cargo.toml
experiments/transformer-vs-recursive/: visualization.py
lean4/visored/: README.md  Visored.lean  lake-manifest.json  lakefile.toml
lean4/visored/Visored/: AdHoc.lean  BaseqElaborator.lean  Basic.lean  MirExpr.lean  Obvious.lean  Pipeline.lean  Std.lean  Tactics.lean
specs/visored/: signature_table.lpcsv
specs/visored/global_default_dispatches/: base_separator.lpcsv  power.lpcsv
(+291 files in other folders)
