[package]
name = "lean-helpers"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
lazy_static = "1.4.0"
# abstractions
enum-index.workspace = true
# lean
lean-entity-path.workspace = true

[dev-dependencies]
husky-path-utils.workspace = true

[lints]
workspace = true
