[package]
name = "num-helpers"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
num-bigint.workspace = true
num-traits.workspace = true

[lints]
workspace = true
